--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Kaazing.Workbench for Chad</h1>
 <br>
 <h3>PowerBettingDemo</h3>
-<a href="PowerBettingDemo/html/power-betting-host-3.html">Host</a>
-<a href="PowerBettingDemo/html/power-betting-client.html">Client</a>
+<a href="PowerBettingDemo/html/power-betting-host-3.html" target="_blank">Host</a>
+<a href="PowerBettingDemo/html/power-betting-client.html" target="_blank">Client</a>
