--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <br>
 <h3>PowerBettingDemo</h3>
 <a href="PowerBettingDemo/html/power-betting-host-3.html" target="_blank">Host</a>
-<a href="PowerBettingDemo/html/power-betting-client.html" target="_blank">Client</a>
+<a href="PowerBettingDemo/html/index.html" target="_blank">Client Login</a>
